docs: gradle更改镜像源，增加统计代码

--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>纷析云 - 让每个决策都有数据支撑</title>
-  </head>
-  <body>
-    <noscript>
-      <strong>We're sorry but front-end doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
-    <div id="app">
-      <div style="text-align: center;margin-top: 20%;">纷析云 - 让每个决策都有数据支撑</div>
-    </div>
-    <!-- built files will be auto injected -->
-  </body>
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width,initial-scale=1.0">
+	<link rel="icon" href="<%= BASE_URL %>favicon.ico">
+	<title>纷析云 - 让每个决策都有数据支撑</title>
+	<meta name="Keywords" content="纷析云，纷析云财务软件，纷析云财税，免费财务软件，财务软件免费版，记账软件，财务软件，免费记账软件，记账软件免费版，会计软件，代账软件, 财务软件源码"/>
+	<meta name="Description" content="纷析云为企业提供私有化部署的财税平台！"/>
+</head>
+<body>
+<noscript>
+	<strong>We're sorry but front-end doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+</noscript>
+<div id="app">
+	<div style="text-align: center;margin-top: 20%;">纷析云 - 让每个决策都有数据支撑</div>
+</div>
+<!-- built files will be auto injected -->
+<script type="text/javascript" src="//js.users.51.la/21554017.js"></script>
+</body>
 </html>
