--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -17,6 +17,8 @@
 	<div style="text-align: center;margin-top: 20%;">纷析云 - 让每个决策都有数据支撑</div>
 </div>
 <!-- built files will be auto injected -->
-<script type="text/javascript" src="//js.users.51.la/21554017.js"></script>
+<script>
+	!function(p){"use strict";!function(t){var s=window,e=document,i=p,c="".concat("https:"===e.location.protocol?"https://":"http://","sdk.51.la/js-sdk-pro.min.js"),n=e.createElement("script"),r=e.getElementsByTagName("script")[0];n.type="text/javascript",n.setAttribute("charset","UTF-8"),n.async=!0,n.src=c,n.id="LA_COLLECT",i.d=n;var o=function(){s.LA.ids.push(i)};s.LA?s.LA.ids&&o():(s.LA=p,s.LA.ids=[],o()),r.parentNode.insertBefore(n,r)}()}({id:"JzbzuRHfk48LkrIV",ck:"JzbzuRHfk48LkrIV",autoTrack:true,hashMode:true});
+</script>
 </body>
 </html>
